--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,9 +2,9 @@ name: Flask-mvc
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ master ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 permissions:
   contents: read
